test/Fail/Issue5238.err
Issue5238.agda:15.15-18: warning: -W[no]RewriteVariablesNotBoundByLHS
foo  is not a legal rewrite rule, since the following variables are not bound by the left hand side:  x
when checking the pragma REWRITE foo

Issue5238.agda:18.8-12: error: [UnequalTerms]
t0 != t1 of type T
when checking that the expression refl has type t0 ≡ t1
